# svg2font

./: .gitignore  Cargo.toml  README.md
.github/workflows/: release.yml
src/: font_builder.rs  main.rs  manifest.rs  preview.rs  svg_parser.rs
